--- a/gke/redmine/mariadb-master-controller.yml
+++ b/gke/redmine/mariadb-master-controller.yml
@@ -1,21 +1,21 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: mariadb
+  name: mariadb-master
   labels:
-    name: mariadb
+    name: mariadb-master
 spec:
   replicas: 1
   selector:
-    name: mariadb
+    name: mariadb-master
   template:
     metadata:
       labels:
-        name: mariadb
+        name: mariadb-master
     spec:
       containers:
-        - name: mariadb
-          image: bitnami/mariadb:5.5.44-0-r02
+        - name: mariadb-master
+          image: bitnami/mariadb
           args:
             - --max_connect_errors=1000
           env:
@@ -25,9 +25,15 @@ spec:
               value: redmine
             - name: MARIADB_PASSWORD
               value: secretpassword
+            - name: REPLICATION_MODE
+              value: master
+            - name: REPLICATION_USER
+              value: replication
+            - name: REPLICATION_PASSWORD
+              value: secretpassword
           ports:
             - containerPort: 3306
-              name: mariadb
+              name: mariadb-master
           volumeMounts:
             - name: mariadb-persistent-storage
               mountPath: /bitnami/mariadb/data
