--- a/gke/redmine/mariadb-slave-service.yml
+++ b/gke/redmine/mariadb-slave-service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mariadb
+  name: mariadb-slave
   labels:
-    name: mariadb
+    name: mariadb-slave
 spec:
   ports:
     - port: 3306
       targetPort: 3306
       protocol: TCP
   selector:
-    name: mariadb
+    name: mariadb-slave
